--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.DTS_praktek2"
         tools:targetApi="31">
         <activity
+            android:name=".Menu3"
+            android:label="Latihan Menu 3"
+            android:exported="false" />
+        <activity
+            android:name=".Menu2"
+            android:label="Latihan Menu 2"
+            android:exported="false" />
+        <activity
+            android:name=".Menu1"
+            android:label="Latihan Menu 1"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
